--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <center>
             <h3 id="s-right">Birth Day Boy</h3>
             <div id="s-right2"><img src="./assets/Rönu-Bhai.jpg" id="acimg " class="rbimg"></div>
-        </center>
+        
         <div id="hid">
-            <p id="mc-p-1"><span class="ctxt">HAPPY</span><br> <img src="./assets/badamamu-maein.jpg" id="bmmimg"></p><p id="mc-p-2"><span class="ctxt">BIRTH</span><br><img src="./assets/Sonu-Bhai.jpg" id="sbmg"></p><p id="mc-p-3"><span class="ctxt">DAY</span><br><img src="./assets/bubun-bhai.jpg" id="bbimg"></p>
+            <p id="mc-p-1">HAPPY<br> <img src="./assets/badamamu-maein.jpg" id="bmmimg"></p>
+            <p id="mc-p-2">BIRTH<br><img src="./assets/Sonu-Bhai.jpg" id="sbmg"></p>
+            <p id="mc-p-3">DAY<br><img src="./assets/bubun-bhai.jpg" id="bbimg"></p>
         </div>
-        <center>
+      
             <div id="grn"><h2>RONU BHAI</h2><img src="./assets/bhai-grp.jpg" id="bbimg"></div>
         </center>
     </div>
